# rsomics-bed-count

./: Cargo.toml  README.md
benches/: bed_count.rs  bench.rs
src/: cli.rs  lib.rs
tests/: compat.rs
